--- a/repositorio/package.json
+++ b/repositorio/package.json
@@ -12,6 +12,7 @@
     "csv": "^5.5.0",
     "material-icons": "^0.5.4",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "react-infinite-scroller": "^1.2.4",
