--- a/repositorio/package.json
+++ b/repositorio/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "csv": "^5.5.0",
     "material-icons": "^0.5.4",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
